--- a/elements-game/src/index.css
+++ b/elements-game/src/index.css
@@ -35,3 +35,11 @@ code {
   background-color: white;
   padding: 30% 0%;
 }
+
+#element-details {
+  position: relative;
+  top: 20%;
+  padding: 0em 1.5em 1.5em 1.5em;
+  height: 50vh;
+  overflow-y: auto;
+}
