--- a/elements-game/src/index.css
+++ b/elements-game/src/index.css
@@ -31,6 +31,11 @@ code {
   padding: 30% 0%;
 }
 
+#element:hover {
+  transform: translate(0px, -1px);
+  background-color: #22FF84;
+}
+
 #blank {
   border: 2px solid white;
   background-color: white;
