--- a/elements-game/src/App.css
+++ b/elements-game/src/App.css
@@ -43,3 +43,10 @@
 .grid-container {
   display: inline-grid;
 }
+
+.sideDisplay {
+  background-color: #2196F3;
+  height: 38.4vw;
+  margin-top: 52px;
+  margin-right: 20px;
+}
