--- a/elements-game/src/index.css
+++ b/elements-game/src/index.css
@@ -15,15 +15,15 @@ code {
 
 #p-table {
   margin-top: 50px;
-  /* background-color: #19BB61; */
+  background-color: #19BB61;
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
-  height: 39vw;
+  /* height: 39vw; */
 }
 
-#element {
+.element {
   border: 2px solid white;
-  background-color: #19BB61;
+  /* background-color: #19BB61; */
   text-align: center;
   color: white;
   font-weight: bold;
@@ -31,16 +31,18 @@ code {
   padding: 30% 0%;
 }
 
-#element:hover {
+.element:hover {
   transform: translate(0px, -1px);
-  background-color: #22FF84;
+  /* background-color: #22FF84; */
 }
 
-#blank {
+.blank {
   border: 2px solid white;
   background-color: white;
   padding: 30% 0%;
 }
+
+
 
 #element-details {
   position: relative;
