added basic quiz function

--- a/elements-game/src/index.css
+++ b/elements-game/src/index.css
@@ -77,7 +77,7 @@ code {
   display: inline-grid;
 }
 
-.sideDisplay {
+.side-display {
   background-color: #2196F3;
   height: 38.4vw;
   margin-top: 52px;
