--- a/elements-game/src/index.css
+++ b/elements-game/src/index.css
@@ -15,15 +15,16 @@ code {
 
 #p-table {
   margin-top: 50px;
-  background-color: #19BB61;
+  background-color: #FFEC2C;
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
   /* height: 39vw; */
+  /* rgb(248, 241, 159); */
 }
 
 .element {
   border: 2px solid white;
-  /* background-color: #19BB61; */
+  /* background-color: #FFEC2C; */
   text-align: center;
   color: white;
   font-weight: bold;
@@ -76,26 +77,30 @@ code {
 .grid-container {
   display: inline-grid;
 }
-
-.side-display {
-  background-color: #2196F3;
+#side-display {
+  background-color: #3843FF;
   height: 38.4vw;
   margin-top: 52px;
   margin-right: 20px;
 }
 
+/* #a8acfc */
+
+
 .question {
   font: #aaa;
+  left: 30%;
   font-size: 1.3rem;
   padding: 30px;
   margin: 10px;
 }
 
 .answer {
-  font: #aaa;
+  position: relative;
   font-size: 1.5rem;
-  padding: 30px;
+  padding: 40px;
   margin: 10px;
+  background: #FFD16C
 }
 
 #dropDown {
@@ -108,5 +113,11 @@ code {
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    background: rgb(176, 217, 250)
+    background: #FFD16C
+}
+
+.next-button{
+  position: absolute;
+  bottom: 10%;
+  right: 40%;
 }
