--- a/elements-game/src/index.css
+++ b/elements-game/src/index.css
@@ -16,13 +16,13 @@ code {
 #p-table {
   margin-top: 50px;
   margin-left: 3vw;
-  background-color: #FFEC2C;
+  background-color: #3843FF;
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
 }
 
 .element {
-  border: 2px solid white;
+  border: 2px solid #f8f7f6;
   text-align: center;
   color: white;
   font-weight: bold;
@@ -35,8 +35,8 @@ code {
 }
 
 .blank {
-  border: 2px solid white;
-  background-color: white;
+  border: 2px solid #f8f7f6;
+  background-color: #f8f7f6;
   padding: 30% 0%;
 }
 
@@ -76,9 +76,11 @@ code {
 }
 
 #side-display {
-  background-color: #3843FF;
+  background-color: rgb(127, 57, 201) ;
   width: 20vw;
+  font-family: 'Space Mono', monospace;
   /* height: 38.4vw; */
+  min-height: 40vh;
   margin-top: 52px;
   /* margin-right: 20px; */
 }
@@ -90,8 +92,10 @@ code {
   /* font: #aaa;
   left: 30%;
   font-size: 1.3rem; */
-  padding: 30px;
-  margin: 10px;
+  font-family: 'Space Mono', monospace;
+  padding-top: .5vh;
+  padding-left: 5vh;
+  color: #FFD16C;
 }
 
 #answer {
@@ -121,3 +125,34 @@ code {
   /* bottom: 10%;
   right: 40%; */
 }
+ #background {
+ background-color: #e9e9eb
+ }
+
+ #header{
+   background-color: rgb(108, 177, 255);  
+   font-family: 'Space Mono', monospace;
+   font-size: 5vh;
+   height: 9vh;
+   padding: 1.0rem;
+   color: rgb(240, 89, 8)
+ }
+
+ body {
+   background-color: #f8f7f6
+ }
+
+ #activity-header{
+   font-family: 'Space Mono', monospace;
+   font-size: 2.5vh;
+   color: rgb(240, 89, 8);
+   padding-top: 1vh;
+   padding-left: 10vh;
+ }
+
+ #nav-bar{
+   padding-left: 2vh
+ }
+
+ /* rgb(127, 57, 201) */
+
