--- a/elements-game/src/index.css
+++ b/elements-game/src/index.css
@@ -16,13 +16,13 @@ code {
 #p-table {
   margin-top: 50px;
   margin-left: 3vw;
-  background-color: #3843FF;
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
 }
 
 .element {
   border: 2px solid white;
+  background-color: #3843FF;
   text-align: center;
   color: white;
   font-weight: bold;
@@ -75,6 +75,7 @@ code {
   /* font: #aaa;
   left: 30%;
   font-size: 1.3rem; */
+  color: white;
   padding: 30px;
   margin: 10px;
 }
@@ -105,4 +106,8 @@ code {
   margin-bottom: 3vw;
   /* bottom: 10%;
   right: 40%; */
+}
+
+#quiz-selectors{
+  margin: 1vw;
 }
