added button to link to create user page from login

--- a/elements-game/src/index.css
+++ b/elements-game/src/index.css
@@ -136,7 +136,10 @@ code {
    padding-left: 2vh
  }
 
- #login-area{
+ #form-area{
    margin-top: 50px;
    width: 50vw;
+   padding: 3vw;
+   border: 1px solid lightgray;
+   border-radius: 10px;
  }
