--- a/elements-game/src/index.css
+++ b/elements-game/src/index.css
@@ -93,7 +93,7 @@ code {
 }
 
 #dropDown {
-  width: 20%;
+  width: 100%;
 }
 
 .ansDisplay {
@@ -133,7 +133,9 @@ code {
  }
 
  #nav-bar{
-   padding-left: 2vh
+   margin-left: 0;
+   margin-right: 0;
+   padding: 0;
  }
 
  #form-area{
