--- a/elements-game/src/index.css
+++ b/elements-game/src/index.css
@@ -1,3 +1,4 @@
+/* Body */
 body {
   margin: 0;
   padding: 0;
@@ -9,16 +10,57 @@ body {
   background-color: #f8f7f6
 }
 
+#background {
+background-color: #e9e9eb
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
+/* Header */
+#header{
+ background-color: #E8320C;
+ font-family: 'Space Mono', monospace;
+ font-size: 5vh;
+ height: 9vh;
+ padding: 1.0rem;
+ color: white;
+}
+
+/* Forms */
+#form-area{
+ margin-top: 50px;
+ width: 50vw;
+ padding: 3vw;
+ border: 1px solid lightgray;
+ border-radius: 10px;
+}
+
+/* Navbar */
+#nav-bar{
+ margin-left: 0;
+ margin-right: 0;
+ padding: 0;
+}
+
+.nav-item {
+  font-family: 'Space Mono', monospace;
+}
+
+/* Table */
 #p-table {
-  margin-top: 50px;
-  margin-left: 3vw;
+  margin-top: 20px;
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
+}
+
+.grid-container {
+  display: inline-grid;
+  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
+  background-color: #3843FF;
+  padding: 10px;
 }
 
 .element {
@@ -41,6 +83,7 @@ code {
   padding: 30% 0%;
 }
 
+/* Modal */
 #element-details {
   position: relative;
   top: 20%;
@@ -49,99 +92,53 @@ code {
   overflow-y: auto;
 }
 
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
-  background-color: #3843FF;
-  padding: 10px;
-}
 
-
-.grid-container {
-  display: inline-grid;
-}
-
+/* Sidebar */
 #side-display {
-  background-color: rgb(127, 57, 201) ;
+  background-color: #E8320C;
   width: 20vw;
   font-family: 'Space Mono', monospace;
-  /* height: 38.4vw; */
-  min-height: 40vh;
-  margin-top: 52px;
-  /* margin-right: 20px; */
+  margin-top: 22px;
+  padding: 2.5vh;
+  color: white;
 }
 
-/* #a8acfc */
-
+#activity-header{
+ font-family: 'Space Mono', monospace;
+ font-size: 1.5vw;
+ font-weight: bold;
+ color: white;
+ line-height: 1.25em;
+}
 
 .question {
-  /* font: #aaa;
-  left: 30%;
-  font-size: 1.3rem; */
   font-family: 'Space Mono', monospace;
-  padding-top: .5vh;
-  padding-left: 5vh;
-  color: #FFD16C;
+  color: white;
 }
 
 #answer {
-  width: 18vw;
-  /* font-size: 1.5rem; */
+  width: 15vw;
   padding: 1vw;
-  margin-left: 1vw;
-  /* background: #FFD16C */
-}
-
-#dropDown {
-  width: 100%;
+  color: rgba(0,0,0,.87);
 }
 
 .ansDisplay {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    background: #FFD16C
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  background: white;
+}
+
+#score-panel {
+  font-size: 1.25rem;
+  font-weight: bold;
 }
 
 #next-button{
-  margin-left: 1vw;
-  margin-bottom: 3vw;
-  /* bottom: 10%;
-  right: 40%; */
+  background-color: white;
+  font-family: 'Space Mono', monospace;
+  color: rgba(0,0,0,.87);
+  font-weight: lighter;
 }
- #background {
- background-color: #e9e9eb
- }
-
- #header{
-   background-color: rgb(108, 177, 255);
-   font-family: 'Space Mono', monospace;
-   font-size: 5vh;
-   height: 9vh;
-   padding: 1.0rem;
-   color: rgb(240, 89, 8)
- }
-
- #activity-header{
-   font-family: 'Space Mono', monospace;
-   font-size: 2.5vh;
-   color: rgb(240, 89, 8);
-   padding-top: 1vh;
-   padding-left: 1vh;
- }
-
- #nav-bar{
-   margin-left: 0;
-   margin-right: 0;
-   padding: 0;
- }
-
- #form-area{
-   margin-top: 50px;
-   width: 50vw;
-   padding: 3vw;
-   border: 1px solid lightgray;
-   border-radius: 10px;
- }
